# Pong-Rougelike

./: .gitignore  CMakeLists.txt  README.md  TODO.txt
include/: AudioManager.h  Ball.h  Buddy.h  Collectible.h  CollectibleManager.h  Enemy.h  GameManager.h  Paddle.h  PaddleStats.h  Player.h  Types.h  UIManager.h  UpgradeCard.h  UpgradeManager.h
include/core/: GameManager.h
include/entities/: Player.h
include/systems/: UIManager.h  UpgradeManager.h
src/: AudioManager.cpp  Ball.cpp  Buddy.cpp  Collectible.cpp  CollectibleManager.cpp  Enemy.cpp  GameManager.cpp  Paddle.cpp  Player.cpp  UIManager.cpp  UpgradeManager.cpp
src/core/: GameManager.cpp
src/entities/: Ball.cpp  Buddy.cpp  Enemy.cpp  Player.cpp
src/systems/: AudioManager.cpp  Collectible.cpp  UIManager.cpp  UpgradeCard.cpp
